张鑫宇---主场景创建

--- a/code/cocos/CocosLuaGame/config.json
+++ b/code/cocos/CocosLuaGame/config.json
@@ -1,9 +1,9 @@
 {
   "init_cfg": {
-    "isLandscape": true,
+    "isLandscape": false,
     "name": "CocosLuaGame",
-    "width": 960,
-    "height": 640,
+    "width": 1024,
+    "height": 768,
     "entry": "src/main.lua",
     "consolePort": 6010,
     "debugPort": 0
